
Controller Pro 1.5.0
====================

New Features:

  - Controller API extension (ORCJAVA-455)
  - Controller API extension - v2 (ORCJAVA-492)
  - Added Alarm Protocol (ORCJAVA-508)
  - Replace RXTX library with nrjavaserial library (ORCJAVA-449)
  - Add support for dynamic command values to Alarm Protocol (ORCJAVA-512)
  - Add Velbus logging config to log4j.properties (ORCJAVA-513)

Bug Fixes:

  - Fixed: Test fixtures are bundle with controller distribution (ORCJAVA-431)
  - Update TcpSocketPort to better handle socket close by throwing an IOException (ORCJAVA-514)
  - Improve connection reliability of VELBUS protocol (ORCJAVA-515)
  - Fixed: Alarm config updates were removign device names from command refs (ORCJAVA-516)

Controller Pro 1.4.1
====================

  - Fixed: openremote.sh launch script fails on certain environments (ORCJAVA-509)

Controller Pro 1.4.0
====================

New Features:
  - Upgrade flexjson library to version 3.2 (ORCJAVA-498)
  - Support remote command to trigger online sync (ORCJAVA-501)
  - Start the BeehiveCommandCheckService thread even if no configuration is loaded (ORCJAVA-504)
  - Add Domintell protocol support (ORCJAVA-253)
  - Parameterize common Beehive connection parameters in config.properties (ORCJAVA-443)

Bug Fixes:

  - Fixed: Multiple issues in BeehiveCommandCheckServiceTest (ORCJAVA-497)
  - Do not encode password in communication with CCS/DDS (ORCJAVA-495)
  - Never send md5 encoded password to backend (ORCJAVA-503)
  - Remove warnings when compiling under JDK7/8 (ORCJAVA-499)
  - Fixed: Re-connection issues with AMX protocol (ORCJAVA-456)
  - Fixed: Potential NPE in BeehiveCommandCheckService (ORCJAVA-505)

Controller Pro 1.3.0
====================

New Features:
  - Add TCPSocketPort for protocols that use TCP (Richard Turner, ORCJAVA-482)
  - Have an option to store password in plain text file instead of keystore (ORCJAVA-493)
  - Add VelbusConfiguration support (ORCJAVA-494)

Controller Pro 1.2.0