@@ -14,6 +14,7 @@ New Features:
   - Replace RXTX library with nrjavaserial library (ORCJAVA-449)
   - Add support for dynamic command values to Alarm Protocol (ORCJAVA-512)
   - Add Velbus logging config to log4j.properties (ORCJAVA-513)
+  - Alarm protocol enhancement (ORCJAVA-517)
 
 Bug Fixes:
 
